# easy-video-fusion

./: README.md  easy-video-fusion-gui.vbs  pyproject.toml
.claude/: settings.local.json
skills/easy-video-fusion/: SKILL.md
skills/easy-video-fusion/scripts/: easy_video_fusion.py
src/easy_video_fusion/: __init__.py  args.py  cli.py  errors.py  ffmpeg.py  gui.py  timeline.py  video_fusion.py
src/easy_video_fusion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: test_args.py  test_gui.py  test_timeline.py  test_video_fusion.py
